--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-    <header class="header">
+    <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
             <ul>
-                <li> <a href="#search-engine-optimization">Search Engine Optimization</a> </li>
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
-                <li><a href="#social-media-marketing">Social Media Marketing</a> </li>
+                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
-    </header>
+    </nav>
 
     <header class="hero"></header>
     <section class="content">
@@ -48,7 +48,7 @@
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <figure>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="benefit-lead-image" />
             </figure>
             <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
         </article>
@@ -56,7 +56,7 @@
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
             <figure>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="brand-image"/>
             </figure>
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </article>
@@ -64,12 +64,12 @@
         <article class="benefit-cost">
             <h3>Cost Management</h3>
             <figure>
-                <img src="./assets/images/cost-management.png" />
+                <img src="./assets/images/cost-management.png" alt="cost-management-image" />
             </figure>
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </article>
     </section>
-    
+
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
